--- a/yummi-server/.env.example
+++ b/yummi-server/.env.example
@@ -2,6 +2,7 @@
 ENVIRONMENT=staging
 APP_NAME=yummi-server
 LOG_JSON=true
+LOG_LEVEL=INFO
 
 # Auth (Clerk)
 CLERK_ISSUER=https://YOUR-CLERK-DOMAIN/.well-known/jwks.json
@@ -24,3 +25,17 @@ ADMIN_EMAILS=you@example.com
 OPENAI_API_KEY=
 OPENAI_ALLOWED_MODELS=gpt-4o-mini,gpt-4o,o4-mini
 OPENAI_DEFAULT_MODEL=gpt-4o-mini
+
+# PayFast
+PAYFAST_MERCHANT_ID=
+PAYFAST_MERCHANT_KEY=
+PAYFAST_PASSPHRASE=
+PAYFAST_NOTIFY_URL=https://yourdomain.com/payments/payfast/itn
+PAYFAST_RETURN_URL=https://yourdomain.com/payfast/return
+PAYFAST_CANCEL_URL=https://yourdomain.com/payfast/cancel
+PAYFAST_MODE=sandbox
+PAYFAST_PDT_TOKEN=
+
+# Observability
+SENTRY_DSN=
+SENTRY_TRACES_SAMPLE_RATE=0.0
