Add wallet ledger API and mobile PayFast integration

--- a/thin-slice-app/.env.example
+++ b/thin-slice-app/.env.example
@@ -1,2 +1,7 @@
 EXPO_PUBLIC_THIN_SLICE_SERVER_URL=https://yummi-server-greenbean.fly.dev/v1/thin
-
+EXPO_PUBLIC_API_BASE_URL=https://yummi-server-greenbean.fly.dev/v1
+EXPO_PUBLIC_PAYFAST_RETURN_URL=yummi://payfast/return
+EXPO_PUBLIC_PAYFAST_CANCEL_URL=yummi://payfast/cancel
+EXPO_PUBLIC_PAYFAST_MODE=sandbox
+# Optional dev JWT for local testing (leave blank in production)
+EXPO_PUBLIC_DEV_JWT=
