--- a/thin-slice-app/package.json
+++ b/thin-slice-app/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.18.1",
     "expo": "~54.0.18",
     "expo-file-system": "^19.0.17",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.9",
     "react": "19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-webview": "^13.16.0"
   },
