--- a/thin-slice-app/.env.example
+++ b/thin-slice-app/.env.example
@@ -3,5 +3,5 @@ EXPO_PUBLIC_API_BASE_URL=https://yummi-server-greenbean.fly.dev/v1
 EXPO_PUBLIC_PAYFAST_RETURN_URL=yummi://payfast/return
 EXPO_PUBLIC_PAYFAST_CANCEL_URL=yummi://payfast/cancel
 EXPO_PUBLIC_PAYFAST_MODE=sandbox
-# Optional dev JWT for local testing (leave blank in production)
-EXPO_PUBLIC_DEV_JWT=
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_your_key_here
+EXPO_PUBLIC_CLERK_JWT_TEMPLATE=yummi-mobile
