--- a/thin-slice-app/package.json
+++ b/thin-slice-app/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "^4.10.8",
     "react-native-webview": "^13.16.0"
   },
   "private": true
