--- a/yummi-server/requirements.txt
+++ b/yummi-server/requirements.txt
@@ -10,8 +10,9 @@ prometheus-fastapi-instrumentator==6.1.0
 structlog==24.1.0
 openai==1.51.0
 SQLAlchemy==2.0.36
-asyncpg==0.29.0
+asyncpg>=0.30.0
 alembic==1.13.2
 cryptography==43.0.1
 sentry-sdk[fastapi]==2.17.0
 aiosqlite==0.20.0
+greenlet==3.1.1
