chore: checkpoint all pending changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - PAYFAST_PDT_TOKEN=${PAYFAST_PDT_TOKEN:-}
       - PAYFAST_RETURN_DEEPLINK=${PAYFAST_RETURN_DEEPLINK:-}
       - PAYFAST_CANCEL_DEEPLINK=${PAYFAST_CANCEL_DEEPLINK:-}
+      - PAYFAST_SKIP_REMOTE_VALIDATION=${PAYFAST_SKIP_REMOTE_VALIDATION:-true}
     ports:
       - "8000:8000"
     depends_on:
