--- a/thin-slice-app/package.json
+++ b/thin-slice-app/package.json
@@ -6,11 +6,14 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "node ./scripts/sync-defined-tags.js"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.18.1",
+    "@react-native/virtualized-lists": "^0.72.8",
     "expo": "~54.0.18",
+    "expo-asset": "~11.0.5",
     "expo-file-system": "^19.0.17",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
